# Zero-Shot-Classification

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: api.py  classifier.py
