[project]
name = "zero-shot-classifier"
version = "0.1.0"
description = "Zero-shot text classifier using HuggingFace and FastAPI"
authors = [{ name = "Shrey Gajjar", email = "shreydotgajjar@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "pydantic",
    "loguru"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"